cmake_minimum_required(VERSION 2.8)
project(MeshViewer)

aux_source_directory(. src_list)
include_directories(.)
if(WIN32 AND NOT MINGW)
	message("WIN32 ")
	link_directories("../glut_lib_for_win32")
	include_directories(../glut_lib_for_win32)
else()
	find_package(GLUT REQUIRED)
	find_package(OpenGL REQUIRED)
	include_directories(${GLUT_INCLUDE_DIR})
	include_directories(${OPENGL_INCLUDE_DIR})
	set(EXTRA_LIBRARIES ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
endif()
add_executable(MeshViewer ${src_list})
target_link_libraries(MeshViewer ${EXTRA_LIBRARIES})
